objects/Knowledge__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Submitted_By__c</fullName>
        <description>This field holds the user who submitted the approval for related knowledge</description>
        <label>Approval Submitted By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Submitted_Email__c</fullName>
        <description>This field will store the email of the Approver who submitted the article</description>
        <label>Approval Submitted Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Article_Status__c</fullName>
        <label>Article Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Ready to be reviewed</fullName>
                </value>
                <value>
                    <fullName>L2 Approved</fullName>
                </value>
                <value>
                    <fullName>L2 Rejected</fullName>
                </value>
                <value>
                    <fullName>L3 Rejected</fullName>
                </value>
                <value>
                    <fullName>L3 Approved (Published)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Author__c</fullName>
        <label>Author</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BodyText__c</fullName>
        <description>Question for FAQ</description>
        <label>Body Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Department_Team__c</fullName>
        <label>Department/Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detail_page_link__c</fullName>
        <description>This is used on the approval page. when approver wants to go to record it will be helpfull</description>
        <formula>HYPERLINK(&quot;/&quot; &amp;  Id , ArticleNumber, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Detail Page Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_A3_URL__c</fullName>
        <label>Internal A3 URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>L1_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>We are using this field om apprvoal process. When L1 is approved updating it as TRUE</description>
        <label>L2 Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L3_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>L3 Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Item_Hyperlink__c</fullName>
        <label>Object/Item(Hyperlink)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>OwnerName__c</fullName>
        <formula>Owner:User.FirstName  &amp;&quot; &quot;&amp;  Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OwnerName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <label>Process</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Record_Link__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;  Id , &quot;Details&quot;, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revision_Date__c</fullName>
        <label>Revision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Step_1_Approved_Date__c</fullName>
        <label>Step 1 Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Submitted_date__c</fullName>
        <label>Submitted date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tags__c</fullName>
        <label>Tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>submitted_by__c</fullName>
        <label>submitted by</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>L1 submitted</fullName>
                </value>
                <value>
                    <fullName>L2 submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Knowledge</label>
    <listViews>
        <fullName>Archived</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>3</value>
        </filters>
        <label>Archived</label>
    </listViews>
    <listViews>
        <fullName>archived_articles</fullName>
        <columns>TITLE</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LANGUAGE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>3</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>Archived Articles</label>
    </listViews>
    <listViews>
        <fullName>draft_articles</fullName>
        <columns>TITLE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LANGUAGE</columns>
        <columns>Approval_Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>Draft Articles</label>
    </listViews>
    <listViews>
        <fullName>published_articles</fullName>
        <columns>TITLE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>ABSTRACT</columns>
        <columns>ARTICLE_NUMBER</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <filters>
            <field>LANGUAGE</field>
            <operation>equals</operation>
            <value>en_US</value>
        </filters>
        <label>Published Articles</label>
    </listViews>
    <pluralLabel>Knowledge</pluralLabel>
    <recordTypes>
        <fullName>FAQ</fullName>
        <active>true</active>
        <description>This can be used for simple question and answer articles</description>
        <label>FAQ</label>
    </recordTypes>
</CustomObject>